--- a/products.html
+++ b/products.html
@@ -131,7 +131,7 @@
       </table>
     </div>
     <!-- Modal_productModal -->
-    <update-product ref="productModal" :is-new="isNew"  :temp-product="tempProduct" :update-product="updateProduct">></update-product>
+    <update-product ref="productModal" :is-new="isNew"  :temp-product="tempProduct" :create-images="createImages" :update-product="updateProduct">></update-product>
    <!-- Modal_delProductModal -->
     <del-product  ref="delProductModal"  :temp-product="tempProduct" :del-product="delProduct"></del-product>
     <!-- Modal_alertToast-->
